<resources>
    <string name="app_name">Info-Bead Media Agent</string>
    <string name="facebook_app_id"></string>
    <string name="twitter_api_key"></string>
    <string name="twitter_consumerKey"></string>
    <string name="twitter_consumerSecret"></string>
    <string name="action_settings">Settings</string>
    <string name="get_history_button">Get history</string>
    <string name="get_likes_button">Get items you liked</string>
    <string name="get_tweets_button">Get tweets</string>
    <string name="title_activity_main">Info-Bead Media Agent</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="fa_dashboard_icon">&#xf0e4;</string>
    <string name="fa_history_icon">&#xf1da;</string>
    <string name="fa_facebook_icon">&#xf230;</string>
    <string name="fa_twitter_icon">&#xf099;</string>
    <string name="fa_youtube_icon">&#xf166;</string>
    <string name="fa_secret_user_icon">&#xf21b;</string>
    <string name="fa_user_icon">&#xf007;</string>
    <string name="fa_desktop_icon">&#xf108;</string>
    <string name="Dashboard">Dashboard</string>
    <string name="StartService">Start Info-Bead Service</string>
    <string name="StopService">Stop Info-Bead Service</string>
    <string name="signed_out">sign out</string>
    <string name="loading">loading</string>
    <string name="signed_in_fmt">signed in fmt</string>
    <string name="Browser_history">Browser history</string>
    <string name="Set_top_box_pref">Set-Top box viewing preferences</string>
    <string name="FaceBook">Facebook</string>
    <string name="Twitter">Twitter</string>
    <string name="YouTube">YouTube</string>
    <string name="info_media_agent">Info-Media Agent</string>
    <string name="info_media_agent_text">Info-Bead Media Agent application collects information about user activities. Please do log in into your Facebook, Twitter and Google accounts.</string>
    <string name="status_app_started">App Started:</string>
    <string name="status_service_started">Collecting service:</string>
    <string name="status_last_info_collection">Last collection:</string>
    <string name="status_last_sent_attempt">Last send attempt:</string>
    <string name="status_last_sent_success">Last successful sent:</string>
    <string name="status_facebook_login">Facebook account:</string>
    <string name="status_twitter_login">Twitter account:</string>
    <string name="status_google_login">Google account:</string>
    <string name="watching_preferences_are_represeted_as_aggregated_vectors_of_views_sessions_count_for_each_program">Watching preferences are represeted as aggregated vectors of views sessions count for each program.</string>
</resources>
