<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        android:isScrollContainer="true">
        <TextView android:id="@+id/section_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Twitter"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your tweets from Twitter public API."
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">
            <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/twitter_login_button"
                android:layout_width="wrap_content"
                android:height="35dp"
                android:layout_height="wrap_content"
                style="@style/AppTheme.Button"/>
            <LinearLayout
                android:id="@+id/logged_in_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/logged_in_shape"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/twitter_profile_text"
                    android:text="profile name"/>
                <Button
                    android:id="@+id/sign_out_button"
                    android:layout_width="wrap_content"
                    style="@style/AppTheme.Button"
                    android:layout_marginRight="5dp"
                    android:singleLine="false"
                    android:textSize="12dp"
                    android:layout_gravity="right"
                    android:text="@string/signed_out"/>
            </LinearLayout>
        </LinearLayout>
        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center|top">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:id="@+id/twitter_details_layout">
                    <Button
                        android:layout_width="wrap_content"
                        android:text="@string/get_tweets_button"
                        android:id="@+id/get_tweets_button"
                        android:layout_alignParentStart="true"
                        android:clickable="true"
                        android:layout_alignParentLeft="true"
                        android:singleLine="false"
                        style="@style/AppTheme.Button"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="30dp"/>
                    <ListView android:id="@+id/tweets_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:dividerHeight="5sp"
                        android:divider="#00000000"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:background="#fff"
                android:alpha="0.4"
                android:visibility="gone"
                android:id="@+id/loading_spinner_layout">
                <ProgressBar
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="20dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</ScrollView>
