<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        android:isScrollContainer="true">
        <TextView android:id="@+id/section_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/YouTube"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Information about watch history from YouTube public API."
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                tools:visibility="gone" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/logged_in_shape"
            android:padding="10dp"
            android:id="@+id/logged_in_layout"
            android:paddingBottom="0dp">
            <ImageView
                android:id="@+id/google_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/common_google_signin_btn_icon_light"
                />
            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signed_out"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="wrap_content"
                style="@style/AppTheme.Button"
                android:layout_marginRight="5dp"
                android:singleLine="false"
                android:textSize="12dp"
                android:text="@string/signed_out"/>
            <Button
                android:id="@+id/disconnect_button"
                android:layout_width="wrap_content"
                style="@style/AppTheme.Button"
                android:layout_marginLeft="5dp"
                android:textSize="12dp"
                android:singleLine="false"
                android:text="disconnect"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/youtube_history_layout"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_marginTop="30dp">
            <Button
                android:layout_width="wrap_content"
                android:text="@string/get_history_button"
                android:id="@+id/get_youtube_watched_button"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:layout_alignParentLeft="true"
                android:singleLine="false"
                style="@style/AppTheme.Button"
                android:layout_marginBottom="10dp"/>
            <ListView android:id="@+id/youtube_watched_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dividerHeight="5sp"
                android:fillViewport="true"
                android:divider="#00000000"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:background="#fff"
            android:alpha="0.4"
            android:visibility="gone"
            android:id="@+id/loading_spinner_layout">
            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="fill_parent"
                android:layout_marginTop="20dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
